<resources>
    <string name="app_name">CSI</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="faq">FAQ</string>
    <string name="email">Email</string>
    <string name="password">PASSWORD</string>
    <string name="login">Login</string>
    <string name="string_faq">FAQ</string>
    <string name="check_status">Check Status</string>

    <string name="Login_Discription">The Ethusia Is an Event Organizaed by Computer Sociaty of India I don\'t know why anyone would use a sweep, but I am including it for completeness.</string>

    <string name="Welcome">Welcome To Enthusia</string>
    <string name="learn_more">Learn More</string>
    <string name="sign_up">Sign UP</string>
    <string name="username">USERNAME</string>
    <string name="participant1_name">Participant1 Name</string>
    <string name="participant1_email">participant1 Email</string>
    <string name="participant2_name">Participant2 Name</string>
    <string name="participant3_name">Participant3 Name</string>
    <string name="participant4_name">Participant4 Name</string>
    <string name="event_name">Event Name</string>
    <string name="event_registration">EVENT REGISTRATION</string>
    <string name="participate">Participate</string>
    <string name="college_name">College Name</string>
</resources>
